# aa-mbs

./: .gitignore  MANIFEST.in  README.md  mock_data.csv  pyproject.toml  requirements.txt  ruff.toml  todo.md
documentation/: styles.css
research/: carry_model_proposal.md  discretisation.md  estimation.md  simulation.md  stochastic_processes.md  value_model.md  value_model_proposal.md
src/aa_mbs/: discretisation.py  main.py  mock_data.py  stochastic_processes.py  value_model.py  value_model_evaluation.py
