[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aa-mbs"
version = "0.1.0"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
    "uv>=0.6.0",
]
requires-python = ">=3.10"
authors = [
    {name = "Stabile Frisur", email = "stabilefrisur@proton.me"},
]
description = "Agency MBS valuation model."
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://pypi.org/project/aa-mbs/"
repository = "https://github.com/stabilefrisur/aa-mbs.git"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.hatch.build.targets.wheel]
packages = ["src/aa_mbs"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
